--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,19 @@
 spring:
   application:
     name: w-ai-agent-backend
+  # 加载配置文件: local
+  profiles:
+    active: local
+  ai:
+    dashscope:
+      api-key: your-api-key
+      chat:
+        options:
+          model: qwen-plus
+    ollama:
+      base-url: http://localhost:11434
+      chat:
+        model: llama3
 
 server:
   port: 8123
@@ -8,7 +21,7 @@ server:
     context-path: /api
 
 # kinfe4j??
-# springdoc-openapi????
+# springdoc-openapi
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
@@ -20,8 +33,13 @@ springdoc:
     - group: 'default'
       paths-to-match: '/**'
       packages-to-scan: com.wjp.waiagentbackend.controller
-# knife4j???????????????
+# knife4j
 knife4j:
   enable: true
   setting:
     language: zh_cn
+
+# 日志
+#logging:
+#  level:
+#    org.springframework.ai.chat.client.advisor.SimpleLoggerAdvisor: debug
