--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,16 @@
             <version>5.6.2</version>
         </dependency>
 
+        <!-- Spring AI md https://mvnrepository.com/artifact/org.springframework.ai/spring-ai-markdown-document-reader -->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-markdown-document-reader</artifactId>
+            <version>1.0.0-M6</version>
+        </dependency>
+
+
+
+
 
 
         <dependency>
