--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,14 @@
             <version>1.0.0-M6</version>
         </dependency>
 
+        <!-- Spring AI 文档读取器 word、ppt -->
+        <!-- https://mvnrepository.com/artifact/org.springframework.ai/spring-ai-tika-document-reader -->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-tika-document-reader</artifactId>
+            <version>1.0.0-M6</version>
+        </dependency>
+
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
