--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,7 @@ server:
   servlet:
     context-path: /api
 
-# kinfe4j??
-# springdoc-openapi
+# springdoc-openapi项目配置
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
@@ -33,7 +32,7 @@ springdoc:
     - group: 'default'
       paths-to-match: '/**'
       packages-to-scan: com.wjp.waiagentbackend.controller
-# knife4j
+# knife4j的增强配置，不需要增强可以不配
 knife4j:
   enable: true
   setting:
@@ -43,3 +42,7 @@ knife4j:
 #logging:
 #  level:
 #    org.springframework.ai.chat.client.advisor.SimpleLoggerAdvisor: debug
+
+# 联网搜索 appkey https://www.searchapi.io/
+search-api:
+  api-key: xxx
